--- a/index.html
+++ b/index.html
@@ -7,6 +7,61 @@
     <link type="text/css" rel="stylesheet" href="/Users/kb186036/WebProjects/TortoiseShell/resources/css/style.css">
   </head>
   <body>
-    <h1>This is a Website</h1>
+    <div class="jumbotron">
+      <div class="banner container">
+        <div class="branding">
+          <img src="/Users/kb186036/WebProjects/TortoiseShell/resources/images/logo-white.png" alt="Glasses Logo">
+          <p>TortoiseShell Optics</p>
+        </div>
+        <div class="nav">
+          <ul>
+            <li>Services</li>
+            <li>Products</li>
+            <li>Contact</li>
+          </ul>
+        </div>
+      </div>
+      <div class="biz-slogan container">
+        <p>DON'T JUST LOOK, SEE.</p>
+      </div>
+    </div>
+    <div class="main container">
+      <div class="workflow">
+        <div class="workflow-card">
+            <img id="exam-sheet" src="/Users/kb186036/WebProjects/TortoiseShell/resources/images/paper-icon.png" alt="exam sheet">
+            <p>Comprehensive Exams</p>
+        </div>
+        <div class="workflow-card" id="ruler">
+            <img src="/Users/kb186036/WebProjects/TortoiseShell/resources/images/ruler-icon.png" alt="measurement">
+            <p>Custom Fittings</p>
+        </div>
+        <div class="workflow-card">
+            <img src="/Users/kb186036/WebProjects/TortoiseShell/resources/images/truck-icon.png" alt="delivery">
+            <p>Fast Delivery</p>
+        </div>
+      </div>
+      <div class="details container">
+        <div class="detail-card" id="philosophy">
+            <p class="detail-card-heading">PHILOSOPHY</p>
+            <p>
+              Over 75% of our brains are dedicated to one sense: vision. We believe
+              everyone deserves to see the world, no matter what. That's why we offer
+              eye exams, custom fittings, and fast delivery at a low cost. It's your
+              vision that makes ours.
+            </p>
+        </div>
+        <div class="detail-card">
+            <p class="detail-card-heading">APPOINTMENTS</p>
+            <p>
+              Schedule an appointment by calling us at (312) 654-0987. We're open
+              Tuesday - Saturday, 9am - 6pm.
+            </p>
+        </div>
+      </div>
+    </div>
+    <div class="footer container">
+      <img src="/Users/kb186036/WebProjects/TortoiseShell/resources/images/logo-black.png" alt="Glasses Logo">
+      <p>Copyright TortoiseShell Optics</p>
+    </div>
   </body>
 </html>
