--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </div>
         <div class="nav">
           <ul>
+            <li id="menu">Menu</li>
             <li>Services</li>
             <li>Products</li>
             <li>Contact</li>
@@ -43,7 +44,7 @@
       <div class="details container">
         <div class="detail-card" id="philosophy">
             <p class="detail-card-heading">PHILOSOPHY</p>
-            <p>
+            <p class="descriptive">
               Over 75% of our brains are dedicated to one sense: vision. We believe
               everyone deserves to see the world, no matter what. That's why we offer
               eye exams, custom fittings, and fast delivery at a low cost. It's your
@@ -52,7 +53,7 @@
         </div>
         <div class="detail-card">
             <p class="detail-card-heading">APPOINTMENTS</p>
-            <p>
+            <p class="descriptive">
               Schedule an appointment by calling us at (312) 654-0987. We're open
               Tuesday - Saturday, 9am - 6pm.
             </p>
